[package]
name = "apic_id"
version = "0.1.0"
description = "Tests Theseus's channel implementations with multiple tasks"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../../build.rs"

[dependencies]
getopts = "0.2.21"
spin = "0.4.10"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.log]
default-features = false
version = "0.3.7"

[dependencies.scheduler]
path = "../../kernel/scheduler"

[dependencies.task]
path = "../../kernel/task"

[dependencies.apic]
path = "../../kernel/apic"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.rendezvous]
path = "../../kernel/rendezvous"

[dependencies.async_channel]
path = "../../kernel/async_channel"

[dependencies.hpet]
path = "../../kernel/hpet"

[dependencies.libtest]
path = "../../kernel/libtest"

[dependencies.heap]
path = "../../kernel/heap"

[dependencies.raw-cpuid]
version = "7.0.3"
features = [ "use_arch" ]

