[package]
name = "bm"
version = "0.1.0"
authors = ["Minhong Yun <mhyun@rice.edu>"]
build = "../../build.rs"

[features]
bm_in_us = []

[dependencies]


# [dependencies.log]
# default-features = false
# version = "0.3.7"


[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.hpet]
path = "../../kernel/hpet"

[dependencies.apic]
path = "../../kernel/apic"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.path]
path = "../../kernel/path"

[dependencies.runqueue]
path = "../../kernel/runqueue"

[dependencies.heapfile]
path = "../../kernel/heapfile"
# [dependencies.application_main_fn]
# path = "../../compiler_plugins"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.scheduler]
path = "../../kernel/scheduler"
