[package]
name = "bm"
version = "0.1.0"
authors = ["Minhong Yun <mhyun@rice.edu>"]

[features]
bm_in_us = []

[dependencies]
getopts = "0.2.21"

[dependencies.log]
version = "0.4.8"

[dependencies.app_io]
path = "../../kernel/app_io"

[dependencies.task]
path = "../../kernel/task"

[dependencies.hpet]
path = "../../kernel/acpi/hpet"

[dependencies.apic]
path = "../../kernel/apic"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.path]
path = "../../kernel/path"

[dependencies.runqueue]
path = "../../kernel/runqueue"

[dependencies.heapfile]
path = "../../kernel/heapfile"
# [dependencies.application_main_fn]
# path = "../../compiler_plugins"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.scheduler]
path = "../../kernel/scheduler"

[dependencies.libtest]
path = "../../kernel/libtest"

[dependencies.memory]
path = "../../kernel/memory"

[dependencies.rendezvous]
path = "../../kernel/rendezvous"

[dependencies.async_channel]
path = "../../kernel/async_channel"

[dependencies.simple_ipc]
path = "../../kernel/simple_ipc"

[dependencies.pmu_x86]
path = "../../kernel/pmu_x86"

[dependencies.mod_mgmt]
path = "../../kernel/mod_mgmt"
