[package]
name = "cat"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../../build.rs"
edition = "2018"

[dependencies]
getopts = "0.2.21"
bare-io = { version = "0.2.1", features = [ "alloc" ] }


[dependencies.log]
version = "0.4.8"


[dependencies.app_io]
path = "../app_io"

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
