[package]
name = "cat"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]

[dependencies]
getopts = "0.2.21"
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }


[dependencies.log]
version = "0.4.8"


[dependencies.app_io]
path = "../../kernel/app_io"

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
