[package]
name = "cd"
version = "0.1.0"
authors = ["Christine Wang <chrissywang54@gmail.com>"]

[dependencies]
getopts = "0.2.21"

[dependencies.log]
default-features = false
version = "0.3.7"

[dependencies.terminal_print]
path = "../terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.root]
path = "../../kernel/root"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"