[package]
name = "cd"
version = "0.1.0"
authors = ["Christine Wang <chrissywang54@gmail.com>"]

[dependencies]
getopts = "0.2.21"

[dependencies.log]
version = "0.4.8"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.root]
path = "../../kernel/root"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"