[package]
name = "cd"
version = "0.1.0"
authors = ["Christine Wang <chrissywang54@gmail.com>"]

[dependencies]
getopts = "0.2.21"
log = "0.4.8"

[dependencies.app_io]
path = "../../kernel/app_io"

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.root]
path = "../../kernel/root"

[dependencies.environment]
path = "../../kernel/environment"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"