[package]
name = "channel_app"
version = "0.1.0"
description = "Used for evaluating live evolution between sync/async channels in Theseus"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../../build.rs"

[dependencies]
getopts = "0.2.21"

[dependencies.log]
default-features = false
version = "0.3.7"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.unified_channel]
path = "../../kernel/unified_channel"

[dependencies.task]
path = "../../kernel/task"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.apic]
path = "../../kernel/apic"
