[package]
name = "cload"
version = "0.1.0"
description = "A convenience application for loading C language libraries or executables."
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../../build.rs"

[dependencies]
getopts = "0.2.21"
log = "0.4.8"
xmas-elf = { version = "0.6.2", git = "https://github.com/theseus-os/xmas-elf.git" }
libc = { version = "0.2", default-features = false }

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.memory]
path = "../../kernel/memory"

[dependencies.mod_mgmt]
path = "../../kernel/mod_mgmt"

[dependencies.task]
path = "../../kernel/task"