[package]
name = "cpu"
version = "0.1.0"
authors = ["Christine Wang <chrissywang54@gmail.com>"]

[dependencies]
getopts = { git = "https://github.com/kevinaboos/getopts" }

[dependencies.input_event_manager]
path = "../../kernel/input_event_manager"

[dependencies.apic]
path = "../../kernel/apic"

[dependencies.scheduler]
path = "../../kernel/scheduler"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
