[package]
name = "cpu"
version = "0.1.0"
authors = ["Christine Wang <chrissywang54@gmail.com>"]
build = "../../build.rs"

[target.'cfg(target_arch = "x86_64")'.dependencies]
apic = { path = "../../kernel/apic"}

[dependencies]
getopts = "0.2.18"

[dependencies.terminal_print]
path = "../terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.runqueue]
path = "../../kernel/runqueue"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
