[package]
name = "date"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]

[dependencies]


[dependencies.input_event_manager]
path = "../../kernel/input_event_manager"

[dependencies.rtc]
path = "../../kernel/rtc"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
