[package]
name = "date"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../../build.rs"

[dependencies]


[dependencies.terminal_print]
path = "../terminal_print"

[dependencies.rtc]
path = "../../kernel/rtc"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
