[package]
name = "date"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
edition = "2021"

[dependencies]

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.time]
path = "../../kernel/time"

[dependencies.chrono]
version = "0.4"
default-features = false

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
