[package]
name = "display_personality"
version = "0.1.0"
authors = ["snoword <qiuj@mail.bnu.edu.cn>"]

[dependencies]
spin = "0.4.5"
volatile = "0.1.0"


[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.1"

#[dependencies.serial_port]
#path = "../serial_port"

#[dependencies.kernel_config]
#path = "../kernel_config"

#[dependencies.state_store]
#path = "../state_store"

[dependencies.log]
default-features = false
version = "0.3.7"

[dependencies.irq_safety]
git = "https://github.com/kevinaboos/irq_safety"

[dependencies.dfqueue]
path = "../../libs/dfqueue"
version = "0.1.0"

[dependencies.keycodes_ascii]
path = "../../libs/keycodes_ascii"

[dependencies.frame_buffer]
path = "../../kernel/frame_buffer"

[dependencies.print]
path = "../../kernel/print"


[dependencies.window_manager]
path = "../../kernel/window_manager"

[dependencies.memory]
path = "../../kernel/memory"

[dependencies.mod_mgmt]
path = "../../kernel/mod_mgmt"

[dependencies.acpi]
path = "../../kernel/acpi"

[dependencies.display]
path = "../../kernel/display"

[dependencies.path]
path = "../../kernel/path"

[dependencies.terminal_print]
path = "../terminal_print"

[dependencies.fs_node]
path = "../../kernel/fs_node"

# [build]
# rustflags = ["-C", "prefer-dynamic", "-C", "panic=abort"]


[lib]
crate-type = ["rlib"] # "lib" does the same thing I think