[package]
name = "displayable"
version = "0.1.0"
authors = ["Wenqiu Yu <yuwenqiuj@gmail.com>"]
description = "provides a Displayable trait, which abstracts objects that can display themselves onto a framebuffer"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"

[dependencies.framebuffer]
path = "../../kernel/framebuffer"

[dependencies.color]
path = "../../kernel/color"

[dependencies.shapes]
path = "../../kernel/shapes"

[lib]
crate-type = ["rlib"]
