[package]
name = "example"
version = "0.1.0"
description = "An example application that shows how to write a basic application for Theseus."
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
build = "../../build.rs"

[dependencies]
getopts = { git = "https://github.com/kevinaboos/getopts" }

[dependencies.terminal_print]
path = "../terminal_print"
