[package]
name = "framebuffer_compositor"
version = "0.1.0"
authors = ["Wenqiu Yu <yuwenqiuj@gmail.com>"]
description = "the framebuffer compositor composites multiple source framebuffers into one destination framebuffer"
build = "../../build.rs"

[dependencies]
spin = "0.9.0"

[dependencies.framebuffer]
path = "../../kernel/framebuffer"

[dependencies.shapes]
path = "../../kernel/shapes"

[dependencies.compositor]
path = "../compositor"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"

[dependencies.hashbrown]
version = "0.11.2"
features = ["nightly"]

[lib]
crate-type = ["rlib"]
