[package]
name = "gen_test_files"
version = "0.1.0"
authors = ["Vikram Mullick <vikram1.mullick@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.log]
version = "0.4.8"

[dependencies.root]
path = "../../kernel/root"

[dependencies.memory]
path = "../../kernel/memory"

[dependencies.memfs]
path = "../../kernel/memfs"
